[package]
name = "nfdump"
version = "0.2.0"
edition = "2021"
license = "ISC"
description = "A Rust library for reading nfdump files"
repository = "https://github.com/markzz/rust-nfdump"
readme = "README.md"
homepage = "https://github.com/markzz/rust-nfdump"
authors = ["Mark King <mark.king@markzz.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bzip2 = "0.4.4"
eui48 = "1.1.0"
lz4_flex = "0.11.1"
minilzo = "0.2.0"
zstd = "0.13.0"
